policy: don't throw away route creation timestamps
These are needed to implement the deterministic ordering in the Gateway
spec.

--- a/policy-controller/core/Cargo.toml
+++ b/policy-controller/core/Cargo.toml
@@ -13,3 +13,4 @@ futures = { version = "0.3", default-features = false, features = ["std"] }
 http = "0.2"
 ipnet = "2"
 regex = "1"
+chrono = { version = "0.4.19", default_features = false }
